Checkbox no longer considered a draggable handle
The checkbox in each diagram element's top bar was previously part of the element's
draggable handle, meaning you could drag an element by its selection checkbox.
This is no longer the case. This should fix some odd issues with dragging.

Will need to confirm on a mobile device once deployed, but using browser device
compatibility testing, it looks like this may fix issue #58

`DiagramElement.tsx`:
- Promoted checkbox <div> out of the draggable handle <div>
- Removed some inline styling, moved to `index.css`

`index.css`:
- Added style rules covering old inline style from `DiagramElement`
- Updated top bar styling a bit. Bar is bigger, text is slightly bigger

--- a/src/index.css
+++ b/src/index.css
@@ -120,11 +120,35 @@ body {
     background: #555500BD;
 }
 
+.diagram-element-top-bar {
+    --diagram-element-top-bar-font-size: 0.8em;
+    display: flex;
+    flex-direction: row;
+    border: 2px solid #000000;
+    height: 1.4em;
+    width: 300px;
+}
+.diagram-element-top-bar.selected-diagram-element {
+    background-color: #ffffff;
+    color: black;
+}
+
+.diagram-element-type-label {
+    font-size: var(--diagram-element-top-bar-font-size);
+    padding-left: 5px;
+    padding-top: calc(2 * (1em - var(--diagram-element-top-bar-font-size)))
+}
+
+.diagram-element-selector-checkbox {
+    position: absolute;
+    right: 0.1em;
+    top: 0;
+    padding-top: calc(1em - var(--diagram-element-top-bar-font-size));
+}
+
 .diagram-element-drag-handle {
     background-color: #000000;
-    height: 16px;
-    width: 300px;
-    border: 2px solid #000000;
+    width: 100%;
     cursor: grab;
     color: white;
 }
